web/static/static/bundle.css
/* ... */
/* ui/center.css */
@layer components {
  .u-center {
    display: grid;
    place-items: center;
    width: 100%;
    height: 100%;
  }
}

/* ui/code.css */
@layer components {
  .u-code {
    font-family: var(--font-mono);
    border-radius: calc((0.5px + 0.2em) * var(--radius-factor, 1));
    padding: 1em;
    overflow-x: auto;
    font-weight: 400;
    background-color: var(--bg-hover);
    box-shadow: inset 0 0 0 1px var(--border-strong);
    color: var(--text-2);
    user-select: text;
    white-space-collapse: preserve;
    word-break: break-all;
    font-size: calc(14px * var(--scale));
    line-height: calc(22px * var(--scale));
    letter-spacing: -0.005em;
    text-wrap: wrap;
  }
  .u-code[data-wrap=nowrap] {
    text-wrap: nowrap;
  }
  .u-code[data-size="1"] {
    font-size: calc(11px * var(--scale));
    line-height: calc(16px * var(--scale));
    letter-spacing: -0.005em;
  }
  .u-code[data-size="2"] {
    font-size: calc(13px * var(--scale));
    line-height: calc(20px * var(--scale));
    letter-spacing: -0.005em;
  }
  .u-code[data-size="3"] {
    font-size: calc(14px * var(--scale));
    line-height: calc(22px * var(--scale));
    letter-spacing: -0.005em;
  }
  .u-code[data-size="4"] {
    font-size: calc(16px * var(--scale));
    line-height: calc(24px * var(--scale));
    letter-spacing: -0.0075em;
  }
}

/* ui/dialog.css */
@layer components {
  .u-dialog[open] {
    border: none;
    padding: 0;
    background: transparent;
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    max-width: none;
    max-height: none;
    overflow: visible;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .u-dialog::backdrop {
    background: rgba(180, 180, 180, 0.6);
  }
  .u-dialog-positioner {
    display: flex;
    max-height: 100%;
    max-width: 100%;
    padding: 3rem;
    pointer-events: none;
  }
  .u-dialog-panel {
    position: relative;
    max-height: 100%;
    display: flex;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
    border-radius: 0.125rem;
    background-color: var(--bg-input);
    padding: 1.5rem;
    pointer-events: auto;
  }
  .u-dialog-close {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
    width: 1.5rem;
    height: 1.5rem;
    padding: 0.25rem;
    border-radius: 9999px;
    background-color: var(--bg-surface);
    display: flex;
  }
}

/* ui/contents.css */
@layer components {
  .u-contents {
    display: contents;
  }
}

/* ui/flex.css */
@layer components {
  .u-flex-row {
    display: flex;
    flex-direction: row;
  }
  .u-flex-col {
    display: flex;
    flex-direction: column;
  }
}

/* ui/gap.css */
@layer components {
  .u-gap-0 {
    gap: 0;
  }
  .u-gap-1 {
    gap: 0.25rem;
  }
  .u-gap-2 {
    gap: 0.5rem;
  }
  .u-gap-3 {
    gap: 0.75rem;
  }
  .u-gap-4 {
    gap: 1rem;
  }
  .u-gap-5 {
    gap: 1.25rem;
  }
  .u-gap-6 {
    gap: 1.5rem;
  }
  .u-gap-7 {
    gap: 1.75rem;
  }
  .u-gap-8 {
    gap: 2rem;
  }
}

/* ui/grid.css */
@layer components {
  .u-grid {
    display: grid;
    width: 100%;
    gap: 0.75rem;
    grid-template-columns: repeat(var(--cols), 1fr);
    margin-inline: auto;
  }
  .u-col-span-2 {
    grid-column: span 2;
  }
  .u-col-span-3 {
    grid-column: span 3;
  }
  .u-col-span-4 {
    grid-column: span 4;
  }
  .u-col-span-5 {
    grid-column: span 5;
  }
  .u-col-span-6 {
    grid-column: span 6;
  }
  .u-col-span-7 {
    grid-column: span 7;
  }
  .u-col-span-8 {
    grid-column: span 8;
  }
  .u-col-span-9 {
    grid-column: span 9;
  }
  .u-col-span-10 {
    grid-column: span 10;
  }
  .u-col-span-11 {
    grid-column: span 11;
  }
  .u-col-span-12 {
    grid-column: span 12;
  }
}

/* ui/icon.css */
@layer components {
  .u-icon {
    width: 1em;
    height: 1em;
    fill: none;
    stroke: currentColor;
    stroke-width: 1.5;
    stroke-linecap: round;
    stroke-linejoin: round;
  }
  .u-icon-solid {
    width: 1em;
    height: 1em;
    fill: currentColor;
  }
}

/* ui/image-frame.css */
@layer components {
  .u-image-frame {
    border-radius: calc(0.125rem * var(--radius-factor, 1));
    overflow: hidden;
  }
  .u-hover-overlay {
    position: relative;
  }
  .u-hover-overlay:hover::after {
    content: "";
    position: absolute;
    inset: 0;
    backdrop-filter: contrast(0.85) brightness(1.3);
    pointer-events: none;
  }
}
/* ... */

